feat: menu, foot, png valid

--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+<ul id="menu">
+    <li><a href="index.html">HOME</a></li>
+</ul>
+
 <div class="sHeader">Headers</div>
 
 <h1>CSS EXAMPLES</h1>
@@ -69,6 +73,13 @@
 
 <div>
     <img src="./img/img1.jpg" alt="FirstImg">
+</div>
+
+<div id="footer">
+    <div id="valid">
+    <img src="./img/vhtml5.png" alt="Valid HTML5" id="fHTML">
+    <img src="./img/vcss.gif" alt="Valid CSS" id="fCSS">
+    </div>
 </div>
 </body>
 </html>
