--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home Page</title>
-    <link rel="stylesheet" type="text/css" href="./css/styles.css">
-    <script src="./js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="files/css/styles.css">
+    <script src="files/js/script.js"></script>
 </head>
 <body>
 
@@ -75,18 +75,18 @@
 </table>
 
 <div class="sHeader" id="dImg" onclick="imgDrop(this);">
-    <img src="./img/img2.jpg" id="ddImg" alt="dropDownImage" style="display: none">
+    <img src="files/img/img2.jpg" id="ddImg" alt="dropDownImage" style="display: none">
     Image
 </div>
 
 <div>
-    <img src="./img/img1.jpg" alt="FirstImg">
+    <img src="files/img/img1.jpg" alt="FirstImg">
 </div>
 
 <div id="footer">
     <div id="valid">
-        <img src="./img/vhtml5.png" alt="Valid HTML5" id="fHTML">
-        <img src="./img/vcss.gif" alt="Valid CSS" id="fCSS">
+        <img src="files/img/vhtml5.png" alt="Valid HTML5" id="fHTML">
+        <img src="files/img/vcss.gif" alt="Valid CSS" id="fCSS">
     </div>
 </div>
 </body>
