--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -11,6 +11,7 @@
 
 <ul id="menu">
     <li><a href="index.html">HOME</a></li>
+    <li><a href="calc.html">CALCULATOR</a></li>
     <li class="dd-menu">
         <a href="#" class="dd">DROPDOWN</a>
         <div class="dd-content">
