--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -15,7 +15,8 @@
     <li class="dd-menu">
         <a href="#" class="dd">DROPDOWN</a>
         <div class="dd-content">
-            <a href="#" onclick="ShowMessage('Hello Anybody from BackEnd(Golang),  FrontEnd(JS, HTML and CSS)')">Say Hello</a>
+            <a href="#" onclick="ShowMessage('Hello Anybody from BackEnd(Golang),  FrontEnd(JS, HTML and CSS)')">Say
+                Hello</a>
             <a href="#" onclick="ShowTime()">Current Date-Time</a>
             <a href="#" onclick="SetWord()">Set Name</a>
         </div>
