fix: calc.html and styles.css -> calc.footer

--- a/server/pages/calc.html
+++ b/server/pages/calc.html
@@ -5,7 +5,7 @@
     <title>Calculator-Go</title>
     <link rel="stylesheet" type="text/css" href="files/css/styles.css">
 </head>
-<body>
+<body id="bdclc">
 
 <ul id="menu">
     <li><a href="index.html">HOME</a></li>
