fix: remove 2.png, check on standatization

--- a/server/pages/calc.html
+++ b/server/pages/calc.html
@@ -20,8 +20,9 @@
     </li>
 </ul>
 <br><br>
-<h1 align=center>Table Calculator</h1>
-<table align=center class="calc">
+<h1 class="hClc">Table Calculator</h1>
+
+<table class="calc">
     <tr>
         <td colspan=5>CALCULATOR</td>
     </tr>
@@ -58,7 +59,8 @@
         <td onclick="SetA(1)">+</td>
     </tr>
 </table>
-<h2 align=center>My simply calculator</h2>
+
+<h2 class="hClc">My simply calculator</h2>
 <div id="footer">
     <div id="valid">
         <img src="files/img/vhtml5.png" alt="Valid HTML5" id="fHTML">
